# CarterJBFinal

./: .env  .gitignore  Crater_Architecture_Review.pptx  Dockerfile  Makefile  Python_Project_Structure.md  compose.yml  pyproject.toml  ~$Crater_Architecture_Review.pptx
src/crater/: __init__.py  __main__.py
src/crater/api/: app.py
src/crater/api/routes/: health.py  status.py
src/crater/config/: settings.py
src/crater/domain/: models.py  watermark.py
src/crater/domain/events/: _helpers.py  base.py  create.py  delete.py  fork.py  issue_comment.py  issues.py  pull_request.py  push.py  release.py  unknown.py  watch.py
src/crater/infrastructure/logging/: setup.py
src/crater/infrastructure/postgres/: connection.py  migrations.py  schema.py
src/crater/infrastructure/redis/: connection.py  watermark_store.py
src/crater/monitoring/: health.py  metrics.py
src/crater/pipeline/: coordinator.py  errors.py  ingestor.py  normalizer.py  poller.py  writer.py
src/crater/queries/: q1_languages.sql  q2_commit_vs_pusher.sql  q3_collaborators.sql  q4_funnel.sql  q5_network.sql
tests/: conftest.py
tests/integration/: conftest.py  test_schema_migration.py
tests/queries/: conftest.py  test_q1_languages.py  test_q3_collaborators.py
tests/queries/fixtures/: seed_data.sql
tests/unit/domain/: test_watermark.py
tests/unit/domain/test_normalizers/: test_fork.py  test_pull_request.py  test_push.py  test_unknown.py
tests/unit/infrastructure/: test_watermark_store.py
tests/unit/pipeline/: test_ingestor.py  test_normalizer_service.py  test_poller.py
(+4 files in other folders)
